[gd_scene load_steps=6 format=3 uid="uid://q7lxigfdjdkq"]

[ext_resource type="PackedScene" uid="uid://b8q7hs3athysl" path="res://rythm_game/pause_menu/PauseMenu3D.tscn" id="1"]
[ext_resource type="Script" path="res://rythm_game/pause_menu/PauseMenu.gd" id="2"]
[ext_resource type="Shader" path="res://rythm_game/pause_menu/blur_shader.gdshader" id="2_esbus"]
[ext_resource type="PackedScene" uid="uid://mk4i5mpqt4hy" path="res://menus/PerSongSettingsEditor.tscn" id="3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j064j"]
shader = ExtResource("2_esbus")

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="TextureRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_j064j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_filter = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)
size_2d_override = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Node3D" parent="SubViewportContainer/SubViewport" instance=ExtResource("1")]

[node name="PerSongSettingsEditor" parent="." instance=ExtResource("3")]
layout_mode = 1
offset_left = -636.5
offset_top = -358.0
offset_right = 636.5
offset_bottom = 358.0

[connection signal="quitted" from="SubViewportContainer/SubViewport/Node3D" to="." method="_on_quit"]
[connection signal="restarted" from="SubViewportContainer/SubViewport/Node3D" to="." method="_on_restart"]
[connection signal="resumed" from="SubViewportContainer/SubViewport/Node3D" to="." method="_on_resumed"]
[connection signal="song_settings" from="SubViewportContainer/SubViewport/Node3D" to="." method="_on_song_settings_open"]
